Add POST routes for login/signup

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h2>Hello world</h2>
+    <!-- This will contain a link to log in / sign up -->
+    <!-- // TODO: make the name, email, and password fields required in ejs file (in both log in and sign up forms)
+        // TODO: add a "reset password" functionality -->
 </body>
 </html>
