Add password reset functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
     <h2>Hello world</h2>
     <!-- This will contain a link to log in / sign up -->
     <!-- // TODO: make the name, email, and password fields required in ejs file (in both log in and sign up forms)
-        // TODO: add a "reset password" functionality -->
+        // TODO: add a "reset password" functionality
+        // TODO: add a "change password" functionality -->
 </body>
 </html>
