--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password</title>
+    <title>Log in - Dryer is Done!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form action='/reset' method="POST" class="form">
-        <label for="email" class="visually-hidden">Email:</label>
-        <input type="email" placeholder="Email" required name="email">
-        <button type="submit" name="reset" class="btn btn-primary btn-sm">Reset</button>
-    </form>
+    <%- include('./partials/nav', { home: '', login: 'active', signup: '' }) %> 
+    
+    <a href="/signup">Need an account? Sign up.</a>
+    <a href="/login">Log in</a>
 </body>
 </html>
