--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h2>Hello world</h2>
-    <!-- This will contain a link to log in / sign up -->
-    <!-- // TODO: make the name, email, and password fields required in ejs file (in both log in and sign up forms)
-        // TODO: add a "reset password" functionality
-        // TODO: add a "change password" functionality -->
+    <%- include('./partials/nav', { home: 'active', login: '', signup: '' }) %> 
+    
+    <!-- // TODO: make the name, email, and password fields required in ejs file (in both log in and sign up forms) -> also check it in server sided code -->
+        <!-- THE BODY OF INDEX SHOULD CONTAIN ALL WASHER AND DRYER INFO! -->
 </body>
 </html>
