Add basic front end form elements

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
 </head>
 <body>
     <%- include('./partials/nav', { home: 'active', login: '', signup: '' }) %> 
+    <div class="container">
     
-    <!-- // TODO: make the name, email, and password fields required in ejs file (in both log in and sign up forms) -> also check it in server sided code -->
-        <!-- THE BODY OF INDEX SHOULD CONTAIN ALL WASHER AND DRYER INFO! -->
+    </div>
 </body>
 </html>
