--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -9,9 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-    <%- include('./partials/nav', { home: '', login: 'active', signup: '' }) %> 
-    
-    <a href="/signup">Need an account? Sign up.</a>
-    <a href="/login">Log in</a>
+    <%- include('./partials/nav', { home: '', login: '', signup: '' }) %> 
+    <div class="container">
+        <!-- TODO: this should only be accessible when a user is logged in, and should take email, old pass and new pass -->
+        <a href="/signup">Need an account? Sign up.</a>
+        <a href="/login">Log in</a>
+    </div>
 </body>
 </html>
