--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -9,10 +9,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form action='/reset' method="POST" class="form">
-        <label for="email" class="visually-hidden">Email:</label>
-        <input type="email" placeholder="Email" required name="email">
-        <button type="submit" name="reset" class="btn btn-primary btn-sm">Reset</button>
-    </form>
+    <%- include('./partials/nav', { home: '', login: '', signup: '' }) %> 
+    <div class="container">
+        <p>Enter the email that you used to sign up. 
+            If your email exists in our database, we will send you an email with your new password. 
+            Please check your spam/junk folder if you do not receive an email within 5 minutes.</p>
+        <form action='/reset' method="POST" class="form my-4">
+            <label for="email" class="visually-hidden">Email:</label>
+            <input type="email" placeholder="Email" required name="email">
+            <button type="submit" name="reset" class="btn btn-outline-primary btn-sm">Reset</button>
+        </form>
+        <a href="/signup">Need to create an account? Sign up.</a>
+    </div>
 </body>
 </html>
