Add changepass form and notes about authorization

--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -11,6 +11,12 @@
 <body>
     <%- include('./partials/nav', { home: '', login: '', signup: '' }) %> 
     <div class="container">
+        <form action="/changepass" method="POST" class="form my-4">
+            <label for="email" class="visually-hidden">Email: </label><input placeholder="Email" type="email" name="email" required><br />
+            <label for="oldpassword" class="visually-hidden">Old Password: </label><input placeholder="Old Password" type="password" name="password" required><br />
+            <label for="newpassword" class="visually-hidden">New Password: </label><input placeholder="New Password" type="password" name="newpassword" required>
+            <button type="submit" class="btn btn-outline-success mx-2 btn-sm">Change Password</button>
+        </form>
         <!-- TODO: this should only be accessible when a user is logged in, and should take email, old pass and new pass -->
         <a href="/signup">Need an account? Sign up.</a>
         <a href="/login">Log in</a>
