Add basic session checks for all routes

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link <%= home %>" href="/">Home <span class="visually-hidden">(current)</span></a>
+        <a class="nav-item nav-link <%= home %>" href="/">Home</a>
         <a class="nav-item nav-link <%= login %>" href="/login">Log in</a> 
         <a class="nav-item nav-link <%= signup %>" href="/signup">Sign up</a> 
         <!-- what about sign up?? TODO: make only one of log in / sign up appear later, based on if the user is logged in or not -->
