Add logic for rendering view based on user logged in/out status

--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -5,17 +5,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <%- include('./partials/nav', { home: '', login: '', signup: '' }) %> 
+    <%- include('./partials/nav', { home: '', login: '', signup: '', logged_in: true }) %> 
     <div class="container">
         <form action="/changepass" method="POST" class="form my-4">
-            <label for="email" class="visually-hidden">Email: </label><input placeholder="Email" type="email" name="email" required><br />
+            <label for="email" class="visually-hidden">Email: </label><input placeholder="Email" type="email" name="email" value="<%= user_info.email %>" required><br />
             <label for="oldpassword" class="visually-hidden">Old Password: </label><input placeholder="Old Password" type="password" name="password" required><br />
             <label for="newpassword" class="visually-hidden">New Password: </label><input placeholder="New Password" type="password" name="newpassword" required>
             <button type="submit" class="btn btn-outline-success mx-2 btn-sm">Change Password</button>
         </form>
         <!-- TODO: this should only be accessible when a user is logged in, and should take email, old pass and new pass -->
-        <a href="/signup">Need an account? Sign up.</a>
-        <a href="/login">Log in</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
