--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,11 +8,11 @@
     <%- include('./partials/nav', { home: '', login: 'active', signup: '' }) %> 
     <div class="container">
         <form action="/login" method="POST" class="form my-4">
-            <label for="email" class="visually-hidden">Email: </label><input placeholder="Email" type="email" name="email" required><br />
+            <label for="email" class="visually-hidden">Email: </label><input required placeholder="Email" type="email" name="email" value="<%= locals.email %>"><br />
             <label for="password" class="visually-hidden">Password: </label><input placeholder="Password" type="password" name="password" required>
             <button type="submit" class="btn btn-outline-success mx-2 btn-sm">Log In</button>
         </form>
-        <a href="/signup">Need an account? Sign up.</a>
+        <a href="/signup">Need an account? Sign up.</a><br />
         <a href="/reset">Forgot Password?</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
