Polish up authorization logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
                   the user_info object -->
             <!-- This particular section is the main section that should display all washer and dryer details + info specific to the logged in user -->
             <!-- TODO: have to add a link to change password somewhere....(only when the user is logged in) -->
+            <!-- Plan: Add a custom settings page where they can reset or change their password -->
         <% } else { %>
             <h1>Welcome! </h1>
             <p>You are not logged in. Please <a href="/login">log in</a> or <a href="/signup">sign up</a> to continue.</p>
