--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -15,7 +15,10 @@
             <input type="email" placeholder="Email" required name="email">
             <button type="submit" name="reset" class="btn btn-outline-primary btn-sm">Reset</button>
         </form>
-        <a href="/signup">Need to create an account? Sign up.</a>
+        <% if (!logged_in) { %>
+            <a href="/signup">Need to create an account? Sign up.</a><br />
+            <a href="/login">Already have an account? Log in.</a><br />
+        <% } %>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
