--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <%- include('./partials/header', { title: 'Change Password' }) %>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <%- include('./partials/nav', { home: '', login: '', signup: '', logged_in: true }) %> 
@@ -13,10 +12,7 @@
             <label for="newpassword" class="visually-hidden">New Password: </label><input placeholder="New Password" type="password" name="newpassword" required>
             <button type="submit" class="btn btn-outline-success mx-2 btn-sm">Change Password</button>
         </form>
-        <!-- TODO: this should only be accessible when a user is logged in, and should take email, old pass and new pass -->
     </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <%- include('./partials/bootstrap') %>
 </body>
 </html>
