Change input labels to have sr-only as their classes

--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -10,7 +10,7 @@
             If your email exists in our database, we will send you an email with your new password. 
             Please check your spam/junk folder if you do not receive an email within 5 minutes.</p>
         <form action='/reset' method="POST" class="form my-4">
-            <label for="email" class="visually-hidden">Email:</label>
+            <label for="email" class="sr-only">Email:</label>
             <input type="email" placeholder="Email" required name="email">
             <button type="submit" name="reset" class="btn btn-outline-primary btn-sm">Reset</button>
         </form>
