--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,8 +7,8 @@
     <%- include('./partials/nav', { home: '', login: 'active', signup: '' }) %> 
     <div class="container">
         <form action="/login" method="POST" class="form my-4">
-            <label for="email" class="visually-hidden">Email: </label><input required placeholder="Email" type="email" name="email" value="<%= locals.email %>"><br />
-            <label for="password" class="visually-hidden">Password: </label><input placeholder="Password" type="password" name="password" required>
+            <label for="email" class="sr-only">Email: </label><input required placeholder="Email" type="email" name="email" value="<%= locals.email %>"><br />
+            <label for="password" class="sr-only">Password: </label><input placeholder="Password" type="password" name="password" required>
             <button type="submit" class="btn btn-outline-success mx-2 btn-sm">Log In</button>
         </form>
         <a href="/signup">Need an account? Sign up.</a><br />
