--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
 
               <div class="row my-4">
                 <div class="col-sm-6">
-                  <div class="card">
+                  <div class="card my-4 mx-2">
                     <div class="card-body">
                       <h5 class="card-title">Washer #1</h5>
                       <p class="card-text">Status: </p> 
@@ -40,7 +40,7 @@
                   </div>
                 </div>
                 <div class="col-sm-6">
-                  <div class="card">
+                  <div class="card my-4 mx-2">
                     <div class="card-body">
                       <h5 class="card-title">Dryer #1</h5>
                       <p class="card-text">Status: </p>
